kubernetes/minikube/service_deployment_ingress-example copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-container-svc
  namespace: "default"
  labels:
    name: demo-container-svc
    app: app-name
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    svc: demo-container-svc
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-container-deployment
  namespace: "default"
  labels:
    app: app-name
spec:
  selector:
    matchLabels:
      app: app-name
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: app-name
        svc: demo-container-svc
    spec:
      containers:
        - name: demo-container-name
          image: nginx
          ports:
            - containerPort: 80       
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
---
 apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
 kind: Ingress
 metadata:
   name: demo-container-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
   - host: demo-container.local
     http:
       paths:
       - path: /
         backend:
           serviceName: demo-container-svc
           servicePort: 80
