kubernetes/minikube/service_deployment_ingress-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-container-svc
  namespace: "default"
 # annotations:
 #   #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:0000000000:certificate/f24f24f2-984525245a1-245245-245245-2452452
  labels:
    name: demo-container-svc
    app: app-name
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    svc: demo-container-svc
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-container-deployment
  namespace: "default"
  labels:
    app: app-name
spec:
  selector:
    matchLabels:
      app: app-name
  replicas: 4
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: app-name
        svc: demo-container-svc
    spec:
      containers:
        - name: demo-container-name
          image: nginx
          ports:
            - containerPort: 80
          #lifecycle:
          #  postStart:
          #    exec:
          #      command: ["sh", "-c", "/root/script.sh"]
#          env:
#            - name: REACT_APP_API_BASE_URL
#              value: "https://www.exampleanalytics.com/example/api"
          #readinessProbe:
          #  httpGet:
          #    path: /health
          #    port: 80
          #  initialDelaySeconds: 120
          #  timeoutSeconds: 5
          #livenessProbe:
          #  httpGet:
          #    path: /liveness
          #    port: 80
          #  initialDelaySeconds: 130
          #  timeoutSeconds: 10
          #  failureThreshold: 10          
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-container-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: demo-container.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-container-svc
                port:
                  number: 80
